# NTU-SC4051-project

./: README.md
Client/: CMakeLists.txt  CacheItem.cpp  CacheItem.h  CacheManager.cpp  CacheManager.h  Client.cpp  Communicator.cpp  Communicator.h  Marshalling.cpp  Marshalling.h  OperationCode.h  ReceivedMessage.cpp  ReceivedMessage.h  Unmarshalling.cpp  Unmarshalling.h
Server/: FileMonitor.java  FileService.java  MonitorService.java  Operation.java  OperationRequest.java  PacketDropSimulator.java  Server.java  Service.java  ServiceHistory.java  Unmarshalling.java
